# windows-cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: config_vcpkg.cmake  local_path.cmake
src/: CMakeLists.txt  ble.cpp  main.cpp  mqtt.cpp  ports.cpp  run_calc.cpp
